add scope for multi-hashtag channels
